Fix some spacing

--- a/less/components/net-neutrality/call-tool.less
+++ b/less/components/net-neutrality/call-tool.less
@@ -31,9 +31,8 @@
   .phone-number-input-container,
   .zip-input-container {
     display: inline-block;
-    margin: 0 0.3rem;
+    margin: 0.3rem;
     white-space: nowrap;
-    font-size: 0.75rem;
     height: 1.8rem;
     overflow: hidden;
 
